changes - new h1, format image, v2 in photoshop first

--- a/css/style.css
+++ b/css/style.css
@@ -45,30 +45,32 @@ body {
 	font-size: 16px;
 	background-color: black;
 	--accent-color: #00ccff;
+	--accent-color-opac: rgba(255, 255, 255, 0.7);
 	font-family: "Open Sans";
 	
 }
-span.overline {
+span.overline, span.subheadline {
 	font-size: 275%;
-	opacity: 0.7;
+	color: var(--accent-color-opac);
 }
 span.highlight {
 	color: var(--accent-color);
 	opacity: 1;
 }
-h1 {
-	font-size: 490%;
+h1, .h1 {
+	font-size: 440%;
 	line-height: 1.2;
 	letter-spacing: 1px;
 	font-weight: bolder;
 	color: #00ccff;
+	display: inline-block;
 }
-span.h1.subheadline {
-	font-size: 260%;
-	opacity: 0.8;
-	letter-spacing: 7px;
+.basicColor {
+	color: rgba(255, 255, 255, 0.7);
 }
-
+.nowrap {
+	white-space: nowrap;
+}
 .trigger,
 .overlay .closebtn  {
 	top: 60px;
@@ -95,7 +97,7 @@ span.h1.subheadline {
   height: 0%;
   width: 100%;
   position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
+  z-index: 2; /* Sit on top */
   left: 0;
   top: 0;
   background-color: rgb(0,0,0); /* Black fallback color */
@@ -157,16 +159,43 @@ section {
 	left: 40px;
 	z-index: 12;
 }
-
+.mask {
+	
+}
 .steckbrief {
 	color: white;
 	margin: 196px 0 0 0;
 }
-
-.steckbrief img {
+.steckbrief .left.mask {
+	position: relative;
 	width: 400px;
-	margin: 40px 20px 20px 0px;
+	margin: 40px 2rem 0px 0px;
+	height: 500px;
+	display: flex;
+	align-content: center;
+	align-items: center;
+}
+.steckbrief .left.mask:before {
+	content: "";
+	width: 100%;
+	height: 100%;
+	position: absolute;
+}
+.steckbrief .left.mask:after {
+	content: "";
+	width: 90%;
+	height: 90%;
+	display: relative;
+	background-image: url(../img/ich.jpg);
+	background-size: contain;
+	background-position: center;
+	background-repeat: no-repeat;
+	margin: auto;
 	float: left;
+	z-index: 1;
+	/*border: 5px solid var(--accent-color);*/
+	border-radius: 10%;
+	
 }
 .steckbrief .me {
 	max-width: 810px;
